--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nunjucks": "^3.0.0",
     "path": "^0.12.7",
     "pg": "^6.1.5",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4"
   },
   "devDependencies": {
